--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -6,7 +6,7 @@ $tertiary-color: #3a8385;
 $quaternary-color: #f4d2da;
 
 body {
-  background-color: $quaternary-color !important;
+  background-color: $tertiary-color !important;
   color: #fff;
   font-family: "Poppins", sans-serif;
   padding-top: env(safe-area-inset-top);
