--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -15,7 +15,7 @@ body {
 }
 
 canvas {
-  height: calc(160px + 10vw) !important;
+  height: calc(140px + 10vw) !important;
 }
 
 #root {
@@ -28,76 +28,39 @@ canvas {
   font-weight: bold;
 }
 
-// .header {
-//   bottom: 0px;
-//   margin-bottom: 0px;
-//   position: relative;
-// }
-
 .canvas-wrapper {
   transition: bottom 1.5s ease-out, margin-bottom 1.5s ease-out;
 }
 
 .camera-capture {
   z-index: 23;
-  bottom: calc(100px + 10vw);
 }
 
-.camera-capture__input {
-  display: none;
-}
-.camera-capture__label {
+.camera-capture__icon {
+  animation: scaling 2s ease-in infinite;
+  cursor: pointer;
+  z-index: 100;
+  position: relative;
   font-size: 4em;
   color: $quaternary-color;
-  transition: color 0.4s ease-in-out, transform 0.4s ease-in-out;
+  transition: all ease-in 0.4s;
   transform: scale(1);
   &:hover {
     color: $secondary-color;
+    transform: scale(1.2) !important;
+  }
+}
+
+@keyframes scaling {
+  0% {
+    transform: scale(1);
+  }
+
+  50% {
     transform: scale(1.1);
   }
-}
-.camera-capture__label svg {
-  cursor: pointer;
-}
 
-.camera-capture__image {
-  width: calc(100px + 50vw);
-  max-width: 450px;
-  margin: 0 auto;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-.access-input {
-  gap: 10px;
-  max-width: 300px;
-}
-
-.access-input input {
-  background-color: transparent;
-  border: 2px solid #fff;
-  border-radius: 5px;
-  color: #fff;
-  font-size: 1.2em;
-  font-family: "Poppins", sans-serif;
-  padding: 10px;
-  width: 100%;
-  &:focus {
-    outline: none;
-  }
-}
-
-.access-input button {
-  background-color: $primary-color;
-  border: 2px solid #fff;
-  border-radius: 5px;
-  color: #fff;
-  font-size: 1.2em;
-  font-family: "Poppins", sans-serif;
-  padding: 10px;
-  width: 100%;
-  &:focus {
-    outline: none;
+  100% {
+    transform: scale(1);
   }
 }
