--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -15,7 +15,7 @@ body {
 }
 
 canvas {
-  height: calc(140px + 10vw) !important;
+  height: calc(180px) !important;
 }
 
 #root {
@@ -34,6 +34,7 @@ canvas {
 
 .camera-capture {
   z-index: 23;
+  margin-top: -70px !important;
 }
 
 .icons {
@@ -71,30 +72,39 @@ canvas {
   }
 }
 
-.instructions {
-  max-width: 400px;
-  height: 0;
-  opacity: 0;
-  transition: all 0.9s ease-out;
-}
-
 .instructions-icon {
   animation: climbing 2s ease-in infinite;
-  right: 20px;
-  bottom: 20px;
+  // right: 20px;
+  // bottom: 20px;
   display: block !important;
   font-size: 3em;
+  stroke-width: 1.3;
+}
+
+.instructions {
+  max-width: 400px;
+  opacity: 0;
+  transition: all 0.9s ease-out;
+  position: relative;
+  bottom: 0;
 }
 
 .album-icon {
-  bottom: 20px;
-  left: 20px;
+  // bottom: 20px;
+  // left: 20px;
   font-size: 3em;
+  stroke-width: 1.5;
 }
 
 .display-help {
-  height: 200px;
   opacity: 1;
+  bottom: 30px;
+}
+
+.status-message {
+  color: #fff;
+  font-size: 1.2em;
+  font-family: "Poppins", sans-serif;
 }
 
 @keyframes climbing {
