Added 3D camera icon

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -2,7 +2,7 @@
 
 $primary-color: #2d6b79;
 $secondary-color: #c97bb1;
-$tertiary-color: #3a8385;
+$tertiary-color: #317678;
 $quaternary-color: #f4d2da;
 
 body {
@@ -14,7 +14,7 @@ body {
   width: 100vw;
 }
 
-canvas {
+header canvas {
   height: calc(180px) !important;
 }
 
