--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -14,6 +14,22 @@ body {
   width: 100vw;
 }
 
+body.landscape::before {
+  content: "Please rotate your device to portrait mode.";
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  font-size: 2em;
+  text-align: center;
+  padding-top: 20%;
+  z-index: 9999;
+}
+
 header canvas {
   height: calc(180px) !important;
 }
