Changed orientation lock text

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -15,7 +15,7 @@ body {
 }
 
 body.landscape::before {
-  content: "Please rotate your device to portrait mode.";
+  content: "Snu mobilen til portrettmodus, da vel 🔄";
   display: block;
   position: fixed;
   top: 0;
