--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -2,7 +2,7 @@
 
 $primary-color: #2d6b79;
 $secondary-color: #c97bb1;
-$tertiary-color: #317678;
+$tertiary-color: #3a8385;
 $quaternary-color: #f4d2da;
 
 body {
